--- a/src/style.scss
+++ b/src/style.scss
@@ -7,3 +7,10 @@ body {
   padding: 0;
   margin: 0;
 }
+
+.header {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+}
