--- a/src/style.css
+++ b/src/style.css
@@ -10,4 +10,68 @@ body {
   flex-direction: column;
   text-align: center;
   align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.header .head {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  height: 600px;
+  width: 300px;
+}
+
+.header .head .title {
+  height: 15%;
+  width: 100%;
+  background-color: #3876bf;
+  text-align: start;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+}
+
+.header .head .title h4 {
+  font-size: 25px;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  margin-left: 10px;
+  margin-bottom: 0;
+  margin-right: 0;
+}
+
+.header .head .title p {
+  padding: 0;
+  margin: 0;
+  font-size: 15px;
+  font-family: "Roboto", sans-serif;
+  color: white;
+  margin-left: 11px;
+}
+
+.header .head .input-Text-Wrap {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  background-color: #3876bf;
+}
+
+.header .head .input-Text-Wrap .text-Input {
+  background-color: #0c356a;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  outline: none;
+  padding: 8px 40px;
+  border-radius: 2rem;
+  border: solid #6499e9 2px;
+}
+
+.header .head .input-Text-Wrap .text-Input::placeholder {
+  color: white;
+  font-family: "Roboto", sans-serif;
 }
