some little changes + bug fix

--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,9 @@ body {
   align-items: center;
   height: 600px;
   width: 300px;
+  border: solid #3876bf 2px;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 .header .head .title {
@@ -111,13 +114,14 @@ body {
 }
 
 .header .head .profile-Card .info-Wrap {
-  width: 80%;
+  width: 70%;
   height: 100%;
   text-align: center;
   align-items: start;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
 }
 
 .header .head .profile-Card .info-Wrap h3 {
